[GStreamer] mediastreamsrc ref sinked triggers critical warning in gst 1.17 https://bugs.webkit.org/show_bug.cgi?id=205777

Reviewed by Carlos Garcia Campos.

* platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
Use a raw pointer to keep track of the src element in the track
observer, similarily to the other observer implementation. Using
GRefPtr here would have the side effect of removing the floating
reference on the element and trigger a critical warning in GStreamer.

Canonical link: https://commits.webkit.org/218984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254116 268f45cc-cd09-0410-ab3c-d52691b4dbfc